[package]
name = "cadir"
version = "0.1.0"
edition = "2021"
description = "This is a tool to create one or many directories. It provides recursive and multithreading modes."
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cadir"
path = "src/lib.rs"
doctest = true
doc = true 
crate-type = ["lib"]

[dependencies]
structopt = "0.3.26"